--- a/public/setup-database.html
+++ b/public/setup-database.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="assets/js/firebase-init.js"></script>
 <script src="assets/js/data.js"></script>
 <script type="text/javascript">
