--- a/public/setup-database.html
+++ b/public/setup-database.html
@@ -6,8 +6,9 @@
 	<title>Document</title>
 </head>
 <body>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="assets/js/firebase-init.js"></script>
+<script src="/__/firebase/8.10.1/firebase-app.js"></script>
+<script src="/__/firebase/8.10.1/firebase-database.js"></script>
+<script src="assets/js/firebase-init.js?v=1"></script>
 <script src="assets/js/data.js"></script>
 <script type="text/javascript">
 	
