--- a/public/setup-database.html
+++ b/public/setup-database.html
@@ -8,24 +8,39 @@
 <body>
 <script src="/__/firebase/8.10.1/firebase-app.js"></script>
 <script src="/__/firebase/8.10.1/firebase-database.js"></script>
-<script src="assets/js/firebase-init.js?v=1"></script>
 <script src="assets/js/data.js"></script>
 <script type="text/javascript">
-	
-var database = firebase.database();
 
-const setQuestionData = question => {
-  firebase.database().ref("questions").set(question);
-}
 
-const pushQuestionData = question => {
-	const newQuestionsRef = firebase.database().ref("questions").push();
-	newQuestionsRef.set(question);
-}
+const firebaseConfig = {
+	apiKey: "AIzaSyBKIH6Xfr3Ix-JpMG0hgRqQteI44vVQq8s",
+	authDomain: "identifymeapps.firebaseapp.com",
+	databaseURL: "https://identifymeapps-default-rtdb.asia-southeast1.firebasedatabase.app",
+	projectId: "identifymeapps",
+	storageBucket: "identifymeapps.appspot.com",
+	messagingSenderId: "927022434226",
+	appId: "1:927022434226:web:36a3561cad7d4bdd2286ab"
+};
 
-questions.forEach(question => {
-	pushQuestionData(question);
-});
+const app = firebase.initializeApp(firebaseConfig);
+
+var database = {
+	db: firebase.database(),
+	push: function(reference, data){
+		const newPush = this.db.ref(reference).push();
+		newPush.set(data);
+	},
+	set: function(reference, data){
+		this.db.ref(reference).set(data);
+	},
+	once: function(reference, callback){
+		return this.db.ref(reference).once("value").then(callback);
+		/*
+		 * function callback(snapshot){ .... }
+		 *
+		 */
+	}
+};
 
 </script>
 </body>
