--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>IdentifyMe Apps | Landing Page</title>
+	<link rel="icon" type="image/x-icon" href="assets/img/logo.jpeg">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="vendor/fontawesome/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="vendor/aos/aos.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css?v=1.0.4">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css?v=1.0.7">
 	<script src="vendor/babel-js/babel.min.js"></script>
 </head>
 <body>
@@ -95,12 +96,13 @@
 			<div class="d-flex justify-content-center">
 				<button type="button" class="btn btn-lg btn-dark" data-aos="fade-up" data-bs-toggle="modal" data-bs-target="#contributionModal1">Saya ingin berkontribusi <i class="fas fa-star"></i></button>
 			</div>
+			<div></div>
 		</div>
 	</section>
 	<section id="question" class="hide">
 		<form name="formAnswer" class="container pt-extra pb-extra">
 			<div id="questionsLoader"></div>
-			<div class="d-flex justify-content-end px-4">
+			<div class="d-flex justify-content-end px-4 mt-4">
 				<button type="button" class="btn btn-secondary me-4" onclick="questionsSectionView(false)">Batal</button>
 				<button type="button" class="btn btn-danger" onclick="saveAnswer()">Simpan <i class="fas fa-check"></i></button>
 			</div>
@@ -118,21 +120,21 @@
 						<h5 class="text-center mb-2">Muhammad Sabri</h5>
 						<p class="text-center mb-4"><small class="text-muted"><b>Teknik Informatika</b><br>Universitas Dipa Makassar</small></p>
 						<div class="social d-flex justify-content-center">
-							<a href="#" target="_blank" class="me-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Email"><i class="far fa-envelope"></i></a>
-							<a href="#" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+							<a href="mailto:muhammadsabri1306@gmail.com" target="_blank" class="me-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Email"><i class="far fa-envelope"></i></a>
+							<a href="https://wa.me/6285144392944" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
 						</div>
 					</div></div>
 				</div>
 				<div class="col-auto">
 					<div class="card border-primary shadow-sm"><div class="card-body">
 						<div class="d-flex justify-content-center pt-2 pb-4">
-							<img src="assets/img/sabri1.jpg" alt="Sabri's picture" class="profile-picture">
+							<img src="assets/img/dedy.jpg" alt="Dedy's picture" class="profile-picture">
 						</div>
 						<h5 class="text-center mb-2">Dedy Kasriadi</h5>
 						<p class="text-center mb-4"><small class="text-muted"><b>Teknik Informatika</b><br>Universitas Dipa Makassar</small></p>
 						<div class="social d-flex justify-content-center">
-							<a href="#" target="_blank" class="me-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Email"><i class="far fa-envelope"></i></a>
-							<a href="#" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+							<a href="#" class="me-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Email"><i class="far fa-envelope"></i></a>
+							<a href="https://wa.me/6282188618717" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
 						</div>
 					</div></div>
 				</div>
@@ -245,58 +247,48 @@
 		<div class="loading-component text-white"><i class="fas fa-circle-notch fa-spin fa-3x"></i></div>
 		<div class="error-component">&nbsp;</div>
 	</div>
+	<div id="alertPlaceHolder"></div>
 </div>
 <template id="questionTemplate">
-	<div class="accordion-item">
-		<h4 class="accordion-header">
-			<button type="button" class="accordion-button">Pertanyaan</button>
-		</h4>
-		<div class="accordion-collapse">
-			<div class="accordion-body">
-				<div class="mb-4">
-					<div class="questions-choices row">
-						<div class="col-md-6 col-lg-3 pb-4"><div class="card" data-choice="a"><div class="card-body"><div class="d-flex">
-							<h4 class="font-weight-800 me-3"></h4>
-							<p class="mb-0"></p>
-						</div></div></div></div>
-						<div class="col-md-6 col-lg-3 pb-4"><div class="card" data-choice="b"><div class="card-body"><div class="d-flex">
-							<h4 class="font-weight-800 me-3"></h4>
-							<p class="mb-0"></p>
-						</div></div></div></div>
-						<div class="col-md-6 col-lg-3 pb-4"><div class="card" data-choice="c"><div class="card-body"><div class="d-flex">
-							<h4 class="font-weight-800 me-3"></h4>
-							<p class="mb-0"></p>
-						</div></div></div></div>
-						<div class="col-md-6 col-lg-3 pb-4"><div class="card" data-choice="d"><div class="card-body"><div class="d-flex">
-							<h4 class="font-weight-800 me-3"></h4>
-							<p class="mb-0"></p>
-						</div></div></div></div>
-					</div>
-					<div class="questions-answer text-center"></div>
+	<div class="accordion-collapse"><div class="card">
+		<div class="card-header bg-light">
+			<h4 class="text-muted mb-0">Pertanyaan</h4>
+		</div>
+		<div class="card-body">
+			<p class="ms-4 mb-4">Saya adalah seorang yang ...</p>
+			<div class="mb-4">
+				<div class="questions-choices row">
+					<input type="hidden" name="" value="">
 				</div>
-				<div class="d-flex justify-content-end">
-					<button type="button" class="btn btn-sm btn-outline-primary questions-prev me-4"><i class="fas fa-caret-left"></i> Kembali</button>
-					<button type="button" class="btn btn-sm btn-outline-primary questions-next">Lanjut <i class="fas fa-caret-right"></i></button>
+			</div>
+			<div class="d-flex justify-content-end">
+				<button type="button" class="btn btn-sm btn-outline-primary questions-prev me-4"><i class="fas fa-caret-left"></i> Kembali</button>
+				<button type="button" class="btn btn-sm btn-outline-primary questions-next">Lanjut <i class="fas fa-caret-right"></i></button>
+			</div>
+		</div>
+	</div></div>
+</template>
+<template id="choiceTemplate">
+	<div class="col-md-6 col-lg-3 pb-4">
+		<div class="card" role="button" data-choice="" data-active="false" data-targetName="" onclick="changeAnswer(this)">
+			<div class="card-body">
+				<div class="d-flex">
+					<h4 class="font-weight-800 me-3"></h4>
+					<p class="mb-0"></p>
 				</div>
 			</div>
 		</div>
 	</div>
 </template>
-<template id="answerTemplate">
-	<div class="form-check form-check-inline py-2">
-		<input type="radio" class="form-check-input" onclick="changeAnswer(this)">
-		<label class="form-check-label font-weight-800"></label>
-	</div>
-</template>
 <script src="/__/firebase/8.10.1/firebase-app.js"></script>
 <script src="/__/firebase/8.10.1/firebase-database.js"></script>
-<script src="assets/js/firebase-init.js?v=1.0.4"></script>
+<script src="assets/js/firebase-init.js?v=1.0.7"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="vendor/fontawesome/js/all.min.js"></script>
 <script src="vendor/aos/aos.min.js"></script>
-<script src="assets/js/script.js?v=1.0.5"></script>
-<script src="assets/js/data.js?v=1.0.4"></script>
-<script type="text/javascript">
+<script src="assets/js/script.js?v=1.0.7"></script>
+<script src="assets/js/data.js??v=1.0.7"></script>
+<script type="text/javascript">	
 
 AOS.init();
 
@@ -346,8 +338,18 @@ const showQuestions = (questions, answerType) => {
 	appendQuestion("accordionQuestion", {questions, answerType}, document.getElementById("questionsLoader"));
 
 	dataAnswer.sync();
-	if(!dataAnswer.isEmpty())
+	if(!dataAnswer.isEmpty()){
 		dataAnswer.fillForm();
+
+		Object.entries(dataAnswer.get()).forEach(([key, val]) => {
+			const activeChoiceElm = document.querySelector(`.card[data-targetName="${key}"][data-choice="${val}"]`);
+			if(activeChoiceElm){
+				activeChoiceElm.setAttribute("data-active", "true");
+				activeChoiceElm.classList.add("bg-danger");
+				activeChoiceElm.classList.add("text-white");
+			}
+		});
+	}
 
 	questionsSectionView(true);
 };
@@ -389,11 +391,38 @@ async function startQuestion(){
 	location.href = "#question";
 }
 
-function changeAnswer(radioElm){
-	const name = radioElm.getAttribute("name");
-	dataAnswer.push(name);
+function changeAnswer(choiceElm){
+	const isActive = choiceElm.getAttribute("data-active");
+	if(isActive === "true") return;
+
+	const choice = choiceElm.getAttribute("data-choice"),
+		targetName = choiceElm.getAttribute("data-targetName");
+	
+	document.formAnswer[targetName].value = choice;
+
+	document.querySelectorAll(`.card[data-targetName="${targetName}"][data-active="true"]`).forEach(card => {
+		card.classList.remove("bg-danger");
+		card.classList.remove("text-white");
+		card.setAttribute("data-active", "false");
+	});
+	choiceElm.classList.add("bg-danger");
+	choiceElm.classList.add("text-white");
+	choiceElm.setAttribute("data-active", "true");
+	
+
+	dataAnswer.push(targetName);
 	dataAnswer.sync();
 }
+
+const showSuccessAlert = () => {
+	const alertPlaceHolder = document.getElementById("alertPlaceHolder"),
+		wrapper = document.createElement("div"),
+		styleW = (window.outerWidth < 768) ? "w-100 " : "";
+
+	wrapper.innerHTML = `<div class="alert alert-sm alert-success alert-dismissible fade show d-flex align-items-center position-fixed top-0 start-50 translate-middle-x ${styleW}mt-md-3"><i class="fas fa-check-circle fa-2x"></i><span class="ms-2"><b>Terima kasih.</b><br>Data kamu telah berhasil disimpan.</span><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>`;
+
+	alertPlaceHolder.append(wrapper);
+};
 
 async function saveAnswer(){
 	const validation = validate("formAnswer");
@@ -427,7 +456,9 @@ async function saveAnswer(){
 	}
 
 	firebase.database().ref("answers/" + id).set(data);
-	alert("Your data was saved!");
+
+	document.getElementById("question").classList.add("hide");
+	showSuccessAlert();
 }
 
 </script>
