--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,15 @@
 			<div class="row">
 				<div class="col-lg">
 					<p class="mb-4" data-aos="fade-up" data-aos-duration="300"><span class="text-brand">IdentifyMe</span> adalah proyek aplikasi berbasis web yang dapat digunakan dalam mengidentifikasi karakter kepribadian seseorang untuk diklasifikasikan sesuai teori empat kepribadian dasar manusia; Sanguinis, Melankolis, Kholeris, dan Plegmatis. Proyek ini didasari kebutuhan akan pentingnya proses pengenalan karakter siswa oleh guru dalam kegiatan belajar-mengajar di sekolah. Dengan mengenali kepribadian siswa, hubungan antar guru dan siswa dapat menjadi lebih baik serta meningkatkan peluang keberhasilan guru dalam mendidik siswanya. Dengan menggunakan <span class="text-brand">IdentifyMe</span>, diharapkan dapat memberikan kontribusi pada kemajuan bidang pendidikan di Indonesia.</p>
+					<div class="d-none d-lg-flex mb-4">
+						<img src="assets/img/undraw_my_app_re_gxtj.svg" width="50%" class="mx-auto" alt="Application on android screen">
+					</div>
 				</div>
 				<div class="col-lg">
-					<p class="mb-4" data-aos="fade-up" data-aos-duration="800">Proyek ini dirancang berdasarkan pada penelitian kami berjudul "Sistem Klasififikasi Karakter Kepribadian Siswa Sekolah Dasar Berdasarkan Tipologi <i>Hippocrates Galenus</i> Menggunakan Metode <i>Naive-Bayes</i>" dan akan dipresentasikan dalam Sidang Skripsi Universitas Dipa Makassar pada Februari 2022.</p>
-					<div class="btn-group" role="group" aria-label="lokasi penelitian" data-aos="fade-up">
-						<button type="button" class="btn btn-outline-primary opacity-100" disabled><i class="fas fa-map-marker-alt text-danger"></i> Lokasi Penelitian</button>
-						<a href="#" class="btn btn-primary" target="_blank">SD Inpres 12/79 Palattae</a>
+					<div class="d-flex mb-4">
+						<img src="assets/img/undraw_professor_-8-lrt.svg" width="70%" class="mx-auto" alt="Presentation">
 					</div>
+					<p class="mb-4" data-aos="fade-up" data-aos-duration="800">Proyek ini dirancang berdasarkan pada penelitian kami berjudul "Sistem Klasififikasi Karakter Kepribadian Siswa Sekolah Dasar Berdasarkan Tipologi <i>Hippocrates Galenus</i> Menggunakan Metode <i>Naive-Bayes</i>" dan akan dipresentasikan dalam Sidang Skripsi Universitas Dipa Makassar pada Februari 2022.</p>
 				</div>
 			</div>
 		</div>
